--- a/course/session-3/knitted/session-2-document.html
+++ b/course/session-3/knitted/session-2-document.html
@@ -227,10 +227,11 @@ dates</code></pre>
 <li>“11.03.2019”</li>
 <li>“43533”</li>
 </ul>
-<p>One is not like the others: days since “1899-12-30” A numeric value takes up less storage space then a character string.</p>
+<p>One is not like the others: Days since “1899-12-30”</p>
+<p>A numeric date format is used due to practical reasons: a numeric value takes up less memory then a character string.</p>
 </div>
 <div id="section" class="section level2">
-<h2>???</h2>
+<h2>1899-12-30 ???</h2>
 <p>Logical would be to choose the origin a “1899-12-31”. This would put “1900-01-01” as day one.</p>
 <p>“Lotus 1-2-3”, a predecessor of Excel: 1900 was a leap year</p>
 <p>It was not, making all their day counts wrong by one day.</p>
@@ -257,50 +258,30 @@ as.numeric(dates) # Only gives dates that can be converted to a number, the rest
 <div id="as.date-function" class="section level2">
 <h2>as.Date function</h2>
 <p><code>as.Date()</code> creates a special data type: Date</p>
-<p>It can convert different formats as long as you give it the correct information. - Character date formats - Numeric date formats</p>
+<p>It can convert different formats as long as you give it the correct information:</p>
+<ul>
+<li>Character date formats</li>
+<li>Numeric date formats</li>
+</ul>
 </div>
 <div id="numeric-date-formats-1" class="section level2">
 <h2>Numeric date formats</h2>
-<pre class="r"><code># Convert them using appropriate origin
-format_1 &lt;- as.Date(as.numeric(dates), origin = &quot;1899-12-30&quot;)</code></pre>
-<pre><code>## Warning in as.Date(as.numeric(dates), origin = &quot;1899-12-30&quot;): NAs introduced by
-## coercion</code></pre>
-<pre class="r"><code>format_1</code></pre>
-<pre><code>##   [1] NA           NA           NA           NA           NA          
-##   [6] NA           NA           NA           NA           NA          
-##  [11] NA           NA           NA           NA           NA          
-##  [16] NA           NA           NA           NA           NA          
-##  [21] NA           NA           NA           NA           NA          
-##  [26] NA           NA           NA           NA           NA          
-##  [31] NA           NA           NA           NA           NA          
-##  [36] NA           NA           NA           NA           NA          
-##  [41] NA           NA           NA           NA           NA          
-##  [46] NA           NA           NA           NA           NA          
-##  [51] NA           NA           NA           NA           NA          
-##  [56] NA           NA           NA           NA           NA          
-##  [61] NA           NA           NA           NA           NA          
-##  [66] NA           NA           NA           NA           NA          
-##  [71] NA           NA           NA           NA           NA          
-##  [76] NA           NA           NA           NA           NA          
-##  [81] NA           NA           NA           NA           NA          
-##  [86] NA           NA           NA           NA           NA          
-##  [91] NA           NA           NA           NA           NA          
-##  [96] NA           NA           NA           NA           NA          
-## [101] &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot;
-## [106] &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot;
-## [111] &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-04-09&quot;
-## [116] &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot;
-## [121] &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot;
-## [126] &quot;2019-10-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot; NA           NA          
-## [131] NA           NA           NA           NA           NA          
-## [136] NA           NA           NA           NA           NA          
-## [141] NA           NA           NA           NA</code></pre>
+<pre class="r"><code># Under the hood, R stores the dates as numeric values, but with origin &quot;1970-01-01&quot;
+format_1 &lt;- as.Date(as.numeric(dates), origin = &quot;1899-12-30&quot;)
+format_1[101:128]</code></pre>
+<pre><code>##  [1] &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot;
+##  [6] &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot;
+## [11] &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-04-09&quot;
+## [16] &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot;
+## [21] &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot;
+## [26] &quot;2019-10-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot;</code></pre>
 </div>
 <div id="character-date-formats" class="section level2">
 <h2>Character date formats</h2>
 <pre class="r"><code># Some character dates in two formats
 # see for symbols: https://devhints.io/datetime
-format_2 &lt;- as.Date(dates, format = &quot;%e.%m.%Y&quot;) # Only gives dates that fit format, rest is NA
+# Only gives dates that fit format, the rest is set to NA
+format_2 &lt;- as.Date(dates, format = &quot;%e.%m.%Y&quot;)
 format_3 &lt;- as.Date(dates, format = &quot;%e/%m/%Y&quot;)
 
 head(format_2)</code></pre>
@@ -649,10 +630,10 @@ chao_BCI</code></pre>
 <pre class="r"><code>#Take 100 random samples from a normal distribution!
 sample_BCI &lt;- rnorm(100, mean = chao_BCI, sd = chao_BCI_se)
 head(sample_BCI)</code></pre>
-<pre><code>## [1] 223.6278 227.9185 232.2499 239.6454 245.2974 236.9527</code></pre>
+<pre><code>## [1] 242.0432 232.9332 234.0866 229.6302 237.5983 239.0159</code></pre>
 <pre class="r"><code>sample &lt;- rnorm(100, mean = 280, sd = 11.5)
 head(sample)</code></pre>
-<pre><code>## [1] 277.8121 259.3528 300.5304 297.1687 276.4807 279.2148</code></pre>
+<pre><code>## [1] 289.4316 285.6961 270.3120 272.3049 266.5865 286.6707</code></pre>
 </div>
 <div id="calculate-gamma-diversity-3" class="section level2">
 <h2>Calculate gamma diversity</h2>
@@ -662,13 +643,13 @@ t.test(sample_BCI, sample)</code></pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_BCI and sample
-## t = -30.667, df = 164.38, p-value &lt; 2.2e-16
+## t = -32.013, df = 155.21, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -47.25349 -41.53670
+##  -47.03071 -41.56394
 ## sample estimates:
 ## mean of x mean of y 
-##  235.7160  280.1111</code></pre>
+##  236.8294  281.1267</code></pre>
 <pre class="r"><code>#p-value &lt; 0.05 --&gt; reject the zero-hypothesis --&gt; significant difference!
 #We lost species!</code></pre>
 </div>
