--- a/course/session-3/knitted/session-3-slides.html
+++ b/course/session-3/knitted/session-3-slides.html
@@ -499,6 +499,11 @@ sum(Hill[, 3])</pre>
 
 <pre >## [1] 1389.517</pre>
 
+<pre class = 'prettyprint lang-r'># R somtimes holds some information back, by rounding, both are equal
+round(sum(Hill[, 3]), 3) == round(sum(invD),3)</pre>
+
+<pre >## [1] TRUE</pre>
+
 </article></slide><slide class=""><hgroup><h2>Plot relationships (1)</h2></hgroup><article  id="plot-relationships-1">
 
 <pre class = 'prettyprint lang-r'>plot(S,H)</pre>
@@ -698,12 +703,12 @@ chao_BCI</pre>
 sample_BCI &lt;- rnorm(100, mean = chao_BCI, sd = chao_BCI_se)
 head(sample_BCI)</pre>
 
-<pre >## [1] 230.9831 246.5028 223.9506 237.9055 235.8031 236.4025</pre>
+<pre >## [1] 239.8213 243.5338 244.2523 246.0007 235.8525 230.1312</pre>
 
 <pre class = 'prettyprint lang-r'>sample &lt;- rnorm(100, mean = 280, sd = 11.5)
 head(sample)</pre>
 
-<pre >## [1] 277.6814 295.4982 294.1960 284.5443 279.3703 266.1101</pre>
+<pre >## [1] 284.0660 281.7816 276.7281 258.5875 289.6635 284.1308</pre>
 
 </article></slide><slide class=""><hgroup><h2>Calculate gamma diversity</h2></hgroup><article  id="calculate-gamma-diversity-3">
 
@@ -714,13 +719,13 @@ t.test(sample_BCI, sample)</pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_BCI and sample
-## t = -34.149, df = 151.37, p-value &lt; 2.2e-16
+## t = -35.999, df = 169.16, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -46.38203 -41.30856
+##  -45.09417 -40.40554
 ## sample estimates:
 ## mean of x mean of y 
-##  236.6116  280.4569</pre>
+##  237.4324  280.1823</pre>
 
 <pre class = 'prettyprint lang-r'>#p-value &lt; 0.05 --&gt; reject the zero-hypothesis --&gt; significant difference!
 #We lost species!</pre>
@@ -755,7 +760,8 @@ abundance &lt;- tussock$abun</pre>
 </article></slide><slide class=""><hgroup><h2>Calculate functional diversity (3)</h2></hgroup><article  id="calculate-functional-diversity-3">
 
 <pre class = 'prettyprint lang-r'>#Now we need to clean the trait data
-#We will only use continuous traits and not seedmass because we are interested in the plant itself
+#We will only use continuous traits and not seedmass
+#   because we are interested in the plant itself
 #We also need to remove species on which we have no trait data
 traits &lt;- traits[, c(2:7, 11)] 
 traits &lt;- na.omit(traits)
