--- a/course/session-5/knitted/session-5-document.html
+++ b/course/session-5/knitted/session-5-document.html
@@ -180,6 +180,7 @@ pre code {
 </div>
 <div id="question-1" class="section level2">
 <h2>Question 1</h2>
+<pre><code>## Warning in rm(&quot;plant_growth&quot;): object &#39;plant_growth&#39; not found</code></pre>
 <pre class="r"><code># First update package
 library(edcpR)
 data(plant_growth, package = &quot;edcpR&quot;)</code></pre>
@@ -516,13 +517,13 @@ t.test(sample_mixed, sample_fes, paired = FALSE)</code></pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_mixed and sample_fes
-## t = -10.41, df = 192.99, p-value &lt; 2.2e-16
+## t = -12.151, df = 194.18, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -11.385470  -7.758446
+##  -11.557974  -8.329879
 ## sample estimates:
 ## mean of x mean of y 
-##  49.59910  59.17106</code></pre>
+##  49.65226  59.59619</code></pre>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>Assignment 4</h2>
