--- a/course/session-5/knitted/session-5-slides.html
+++ b/course/session-5/knitted/session-5-slides.html
@@ -212,7 +212,7 @@ head(plant_growth)</pre>
 
 <pre >## &#39;data.frame&#39;:    20 obs. of  2 variables:
 ##  $ Yield    : num  4.17 5.58 5.18 6.11 4.5 4.61 5.17 4.53 5.33 5.14 ...
-##  $ Treatment: Factor w/ 2 levels &quot;ctrl&quot;,&quot;trt2&quot;: 1 1 1 1 1 1 1 1 1 1 ...</pre>
+##  $ Treatment: chr  &quot;ctrl&quot; &quot;ctrl&quot; &quot;ctrl&quot; &quot;ctrl&quot; ...</pre>
 
 <pre class = 'prettyprint lang-r'>plant_growth$Treatment &lt;- as.factor(plant_growth$Treatment)
 str(plant_growth)</pre>
@@ -556,13 +556,13 @@ t.test(sample_mixed, sample_fes, paired = FALSE)</pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_mixed and sample_fes
-## t = -11.664, df = 196.71, p-value &lt; 2.2e-16
+## t = -11.566, df = 197.67, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -11.723756  -8.332746
+##  -11.374208  -8.060583
 ## sample estimates:
 ## mean of x mean of y 
-##  49.31330  59.34156</pre>
+##  50.43945  60.15684</pre>
 
 </article></slide><slide class=""><hgroup><h2>Assignment 4</h2></hgroup><article  id="assignment-4">
 
