--- a/course/session-5/knitted/session-5-document.html
+++ b/course/session-5/knitted/session-5-document.html
@@ -283,9 +283,7 @@ t.test(Yield ~ Treatment, data = plant_growth, paired = FALSE)</code></pre>
 </div>
 <div id="question-2" class="section level2">
 <h2>Question 2</h2>
-<pre class="r"><code>library(datasets)
-data(iris_s5, package = &quot;datasets&quot;)</code></pre>
-<pre><code>## Warning in data(iris_s5, package = &quot;datasets&quot;): data set &#39;iris_s5&#39; not found</code></pre>
+<pre class="r"><code>data(iris_s5, package = &quot;edcpR&quot;)</code></pre>
 <p>We studied the differences in flower dimensions between three iris species (Iris setosa, Iris versicolor, Iris virginica). We sampled 10 individuals of each species and measured the sepal and petal length and width.</p>
 <p><strong>Research question</strong>: Do the three iris species have different sepal lengths?</p>
 </div>
@@ -521,28 +519,28 @@ t.test(sample_mixed, sample_fes, paired = FALSE)</code></pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_mixed and sample_fes
-## t = -11.615, df = 194.7, p-value &lt; 2.2e-16
+## t = -13.276, df = 197.78, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -11.496522  -8.159106
+##  -12.07620  -8.95262
 ## sample estimates:
 ## mean of x mean of y 
-##  49.58978  59.41760</code></pre>
+##  49.12953  59.64394</code></pre>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>Assignment 4</h2>
 <p>Available on Toledo under Assignments (Assignment 4). Submit:</p>
 <ul>
-<li>Word-document (<strong>Surname_FirstName_assignment4.docx</strong>)
+<li>Word-document (<strong>Surname_Firstname_assignment4.docx</strong>)
 <ul>
 <li>explain your methods, interpretations and conclusions</li>
 <li>maximum 1.5 pages</li>
 </ul></li>
-<li>R-script (<strong>Surname_FirstName_assignment4.R</strong>)</li>
+<li>R-script (<strong>Surname_Firstname_assignment4.R</strong>)</li>
 <li><strong>two weeks</strong> for this assignment!</li>
 </ul>
 <p> </p>
-<p>Upload everything before <strong>December 2nd, 12 pm (= at noon!)</strong>.</p>
+<p>Upload everything before <strong>December 1st, 12 pm (= at noon!)</strong>.</p>
 </div>
 </div>
 
