--- a/course/session-5/knitted/session-5-slides.html
+++ b/course/session-5/knitted/session-5-slides.html
@@ -297,10 +297,7 @@ t.test(Yield ~ Treatment, data = plant_growth, paired = FALSE)</pre>
 
 </article></slide><slide class=""><hgroup><h2>Question 2</h2></hgroup><article  id="question-2">
 
-<pre class = 'prettyprint lang-r'>library(datasets)
-data(iris_s5, package = &quot;datasets&quot;)</pre>
-
-<pre >## Warning in data(iris_s5, package = &quot;datasets&quot;): data set &#39;iris_s5&#39; not found</pre>
+<pre class = 'prettyprint lang-r'>data(iris_s5, package = &quot;edcpR&quot;)</pre>
 
 <p>We studied the differences in flower dimensions between three iris species (Iris setosa, Iris versicolor, Iris virginica). We sampled 10 individuals of each species and measured the sepal and petal length and width.</p>
 
@@ -563,32 +560,32 @@ t.test(sample_mixed, sample_fes, paired = FALSE)</pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_mixed and sample_fes
-## t = -13.754, df = 196.01, p-value &lt; 2.2e-16
+## t = -12.45, df = 197.93, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -12.656645  -9.482157
+##  -12.586254  -9.144171
 ## sample estimates:
 ## mean of x mean of y 
-##  49.41209  60.48149</pre>
+##  49.74808  60.61329</pre>
 
 </article></slide><slide class=""><hgroup><h2>Assignment 4</h2></hgroup><article  id="assignment-4">
 
 <p>Available on Toledo under Assignments (Assignment 4). Submit:</p>
 
 <ul>
-<li>Word-document (<strong>Surname_FirstName_assignment4.docx</strong>)
+<li>Word-document (<strong>Surname_Firstname_assignment4.docx</strong>)
 
 <ul>
 <li>explain your methods, interpretations and conclusions</li>
 <li>maximum 1.5 pages</li>
 </ul></li>
-<li>R-script (<strong>Surname_FirstName_assignment4.R</strong>)</li>
+<li>R-script (<strong>Surname_Firstname_assignment4.R</strong>)</li>
 <li><strong>two weeks</strong> for this assignment!</li>
 </ul>
 
 <p> </p>
 
-<p>Upload everything before <strong>December 2nd, 12 pm (= at noon!)</strong>.</p></article></slide>
+<p>Upload everything before <strong>December 1st, 12 pm (= at noon!)</strong>.</p></article></slide>
 
 
   <slide class="backdrop"></slide>
